force-app/main/default/objects/Opp_Team_Member_by_Type__mdt/Opp_Team_Member_by_Type__mdt.object-meta.xml
<CustomObject>
    <description>Assign Opportunity Team Members based on Opportunity Type</description>
    <label>Opp Team Member by Type</label>
    <pluralLabel>Opp Team Member by Types</pluralLabel>
</CustomObject>