force-app/main/default/objects/Opp_Team_Member_by_Type__mdt/fields/Opp_Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Opp_Team_Member_Role__c</fullName>
    <description>Use this field to define the Role of the Opportunity Team Member</description>
    <inlineHelpText>Use this field to define the Role of the Opportunity Team Member</inlineHelpText>
    <label>Opp Team Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PP</fullName>
                <default>true</default>
                <label>Lead Proposal Primary</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Collaborator</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <label>Resource</label>
            </value>
            <value>
                <fullName>LI</fullName>
                <label>AAD/Liason</label>
            </value>
            <value>
                <fullName>RM</fullName>
                <label>PRM</label>
            </value>
            <value>
                <fullName>SW</fullName>
                <label>Stewardship</label>
            </value>
            <value>
                <fullName>GP</fullName>
                <label>GPO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>