force-app/main/default/objects/Opp_Team_Member_by_Type__mdt/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <default>true</default>
                <label>V-Fundraiser</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E-CFR External</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>W-CFR Written</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R-Recognition Society</label>
            </value>
            <value>
                <fullName>O-CFR Online</fullName>
                <isActive>false</isActive>
                <label>O-CFR Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>