force-app/main/default/objects/Opp_Team_Member_by_Type__mdt/fields/Stewardship_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_Staff_ID__c</fullName>
    <description>User ID of Stewardship Staff Member that should be assigned based on Proposal Type.</description>
    <inlineHelpText>User ID of Stewardship Staff Member that should be assigned based on Proposal Type.</inlineHelpText>
    <label>Stewardship Staff ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>