force-app/main/default/objects/Opp_Team_Member_by_Type__mdt/fields/Sub_Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Proposal_Type__c</fullName>
    <label>Sub-Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <default>true</default>
                <label>Endowed</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Expendable</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Grant</label>
            </value>
            <value>
                <fullName>PG</fullName>
                <label>Planned Gift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>